--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "firebase": "^10.8.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.2.0",
@@ -21,7 +22,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
